--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -28,3 +28,33 @@ fr:
       appointment: Séance
       place: Lieu
       talent: Talent
+  helpers:
+    placeholder:
+      user:
+        current_password: Mot de passe actuel
+        email: Ton email
+        encrypted_password: Mot de passe chiffré
+        password: Mot de passe
+        password_confirmation: Confirmation du mot de passe
+        first_name: Ton prénom
+        last_name: Ton nom de famille
+        phone_number: Ton numéro de téléphone
+        place: Ton lieu d'habitation
+      appointment:
+        start_time: La date/heure de début de la séance
+        mentor: Le mentor
+        apprentice: L'apprenti
+        talent: Le talent
+        place: Le lieu de la séance
+      place:
+        city_name: La ville
+        zip_code: Le code postal
+        adress: L'adresse
+        latitude: La latitude
+        longitude: La longitude
+      talent:
+        user: Le mentor
+        default_place: Le lieu par défaut d'une séance
+        title: Le titre du talent
+        description: La description du talent
+        duration: La durée d'une séance
